12894 root zpool with SLOG should be bootable Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Dan McDonald <danmcd@joyent.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>